--- a/index.html
+++ b/index.html
@@ -1,9 +1,41 @@
-<!doctype html>
-<html lang="en-us">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Chris Fowler</title>
+  <meta charset="UTF-8">
+  <meta name="author" content="Chris Fowler">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chris Fowler's WDD230 Home Page | BYU-I</title>
+  <meta name="description" content="Chris Fowler's Course Portal Home Page for Web Design and Development I (WDD 230).
+    This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
+  <link rel="stylesheet" href="css/indexStyles.css">
 </head>
 <body>
- <h1>Chris Fowler</h1>
+
+  <header>
+    <h1>Chris Fowler</h1>
+    <img src="images/myport_1.jpg" alt="Portrait of Chris Fowler on dark background">
+  </header>
+
+  <nav>
+    <h2>CIT 230: Assignment Portal</h2>
+    <ul>
+      <li>Lesson 02: <a href="">Assignment Link</a> </li>
+      <li>Lesson 03: <a href="">Assignment Link</a> </li>
+      <li>Lesson 04: <a href="">Link</a> | <a href="">Link</a> </li>
+    </ul>
+  </nav>
+
+  <footer>
+    <div id="copyright">
+      &copy; <span id="currentYear"></span> | Chris Fowler | Utah | <a href="https://www.byui.edu/online" target="blank">BYUI Online Learning</a>
+    </div>
+    <div class="dates">
+      Today: <span id="currentDate"></span> | Last Updated: <span id="lastUpdated"></span>
+    </div>
+  </footer>
+
+  <!-- Inserts today's date and the date the document was last modified -->
+  <script src="js/dates.js"></script>
+
 </body>
 </html>
