--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
+
 <head>
   <meta charset="UTF-8">
   <meta name="author" content="Chris Fowler">
@@ -9,11 +10,12 @@
     This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
   <link rel="stylesheet" href="css/indexStyles.css">
 </head>
+
 <body>
 
+  <img id="portrait" src="images/myport_1.jpg" alt="Portrait of Chris Fowler on dark background">
   <header>
     <h1>Chris Fowler</h1>
-    <img src="images/myport_1.jpg" alt="Portrait of Chris Fowler on dark background">
   </header>
 
   <nav>
@@ -27,7 +29,8 @@
 
   <footer>
     <div id="copyright">
-      &copy; <span id="currentYear"></span> | Chris Fowler | Utah | <a href="https://www.byui.edu/online" target="blank">BYUI Online Learning</a>
+      &copy; <span id="currentYear"></span> | Chris Fowler | Utah | <a href="https://www.byui.edu/online"
+        target="blank">BYUI Online Learning</a>
     </div>
     <div class="dates">
       Today: <span id="currentDate"></span> | Last Updated: <span id="lastUpdated"></span>
@@ -38,4 +41,5 @@
   <script src="js/dates.js"></script>
 
 </body>
+
 </html>
