--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Chris Fowler's Course Portal Home Page for Web Design and Development I (WDD 230).
     This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
