updated h1 and footer CSS for mobile viewing

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
   <footer>
     <div id="copyright">
-      &copy; <span id="currentYear"></span> | Chris Fowler | Utah | <a href="https://www.byui.edu/online"
-        target="blank">BYUI Online Learning</a>
+      <span id="currentYear"></span> <span class="byuLink"><a href="https://www.byui.edu/online"
+        target="blank">BYUI Online Learning</a></span>
     </div>
     <div class="dates">
-      Today: <span id="currentDate"></span> | Last Updated: <span id="lastUpdated"></span>
+      <span id="currentDate"></span> <span id="separate"> | </span> <span id="lastUpdated"></span>
     </div>
   </footer>
 
