--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
 
   <nav>
-    <h2>CIT 230: Assignment Portal</h2>
+    <h2>WDD 230: Assignment Portal</h2>
     <ul>
       <li>Lesson 02: <a href="">Assignment Link</a> </li>
       <li>Lesson 03: <a href="">Assignment Link</a> </li>
