deleted images from image folder

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <img id="portrait" src="images/myport_1.jpg" alt="Portrait of Chris Fowler on dark background">
+  <img id="portrait" src="images/myport.jpg" alt="Portrait of Chris Fowler on dark background">
   <header>
     <h1>Chris Fowler</h1>
   </header>
