added medium.css and changed main to small.css

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <meta name="description" content="Chris Fowler's Course Portal Home Page for Web Design and Development I (WDD 230).
     This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/small.css">
+  <link rel="stylesheet" href="css/medium.css">
 </head>
 
 <body>
 
-  <img id="portrait" src="images/myport.jpg" alt="Portrait of Chris Fowler on dark background">
   <header>
+    <img id="portrait" src="images/myport.jpg" alt="Portrait of Chris Fowler on dark background">
     <h1>Chris Fowler</h1>
   </header>
 
