--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <title>Chris Fowler's WDD230 Home Page | BYU-I</title>
   <meta name="description" content="Chris Fowler's Course Portal Home Page for Web Design and Development I (WDD 230).
     This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/small.css">
-  <link rel="stylesheet" href="css/medium.css">
+  <link rel="stylesheet" href="/lesson1/css/normalize.css">
+  <link rel="stylesheet" href="/lesson1/css/small.css">
+  <link rel="stylesheet" href="/lesson1/css/medium.css">
 </head>
 
 <body>
 
   <header>
-    <img id="portrait" src="images/myport.jpg" alt="Portrait of Chris Fowler on dark background">
+    <img id="portrait" src="/lesson1/images/myport.jpg" alt="Portrait of Chris Fowler on dark background">
     <h1>Chris Fowler</h1>
   </header>
 
@@ -40,7 +40,7 @@
   </footer>
 
   <!-- Inserts today's date and the date the document was last modified -->
-  <script src="js/dates.js"></script>
+  <script src="/lesson1/js/dates.js"></script>
 
 </body>
 
