--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -21,7 +21,7 @@
   </header>
   
   <nav>
-    <a href="../lesson1/index.html">Home</a>
+    <a href="../index.html">Home</a>
   </nav>
 
   <main>
