updated css and moved lesson1 files into folders

--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
   <title>Chris Fowler's WDD230 Home Page | BYU-I</title>
   <meta name="description" content="Chris Fowler's Course Portal Home Page for Web Design and Development I (WDD 230).
     This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/small.css">
-  <link rel="stylesheet" href="css/medium.css">
+  <link rel="stylesheet" href="/lesson1/css/normalize.css">
+  <link rel="stylesheet" href="/lesson1/css/small.css">
+  <link rel="stylesheet" href="/lesson1/css/medium.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Inknut+Antiqua:wght@800&family=Open+Sans&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
 
   <header>
-    <img id="portrait" src="images/myport.jpg" alt="Portrait of Chris Fowler on dark background">
+    <img id="portrait" src="/lesson1/images/myport.jpg" alt="Portrait of Chris Fowler on dark background">
     <h1>Chris Fowler</h1>
   </header>
 
   <nav>
     <h2>WDD 230: Assignment Portal</h2>
     <ul>
-      <li>Lesson 02: <a href="../lesson2/design-principles.html">Design Principles</a> </li>
+      <li>Lesson 02: <a href="/lesson2/design-principles.html">Design Principles</a> </li>
       <li>Lesson 03: <a href="">Assignment Link</a> </li>
       <li>Lesson 04: <a href="">Link</a> | <a href="">Link</a> </li>
     </ul>
@@ -40,7 +42,7 @@
   </footer>
 
   <!-- Inserts today's date and the date the document was last modified -->
-  <script src="js/dates.js"></script>
+  <script src="/lesson1/js/dates.js"></script>
 
 </body>
 
