--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="css/small.css">
   <link rel="stylesheet" href="css/medium.css">
   <link rel="stylesheet" href="css/large.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Inknut+Antiqua:wght@800&family=Open+Sans&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
