--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -33,7 +33,7 @@
       <h4>The Church of Jesus Christ</h4>
       <a href="https://www.churchofjesuschrist.org" target="blank">churchofjesuschrist.org</a>
       <img src="images/LDS_screenshot.jpg" alt="Mobile View Screenshot of ChurchOfJesusChrist.org">
-      <p>There a few examples of contrast right off the bat for The Church of Jesus Christ of Latter-Day Saint's website.</p>
+      <p>There are a few examples of contrast right off the bat for The Church of Jesus Christ of Latter-Day Saint's website.</p>
       <p>First, the church's name is in a black font over a white background. Within the churhc's name, the words JESUS CHRIST are bigger to create emphasis and contrast.</p>
       <p>Moving down to the link navigation button, there are three white lines on a blue background. This creates contrast by changing from the white background above, and the button stands out since it is now white.</p>
       <p>Finally, within the first image on the site, the font is a white sans-serif which contrasts the black serif font of the church's name. Within the white typography over the image, there is a light font that is contrasted by a larger and bolder version of the same font.</p>
