updated fitt's law link

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -44,7 +44,7 @@
       <h4>Operation Underground Railroad</h4>
       <a href="https://www.ourrescue.org" target="blank">ourrescue.org</a>
       <img src="images/OUR_screenshot.jpg" alt="Mobile View Screenshot of OURrescue.org">
-      <p>The Operation Underground Railroad's mobile site is a good example of Fitts' Law. Fitt's Law states that the amount of time required for someone to move a pointer (such as a finger on a touchscreen) is a function of the distance to the target divided by the overall size of the target (<a href="https://www.interaction-design.org/literature/topics/fitts-law#:~:text=Fitts'%20law%20states%20that%20the,size%2C%20the%20longer%20it%20takes" target="blank">What is Fitt's Law?</a>).</p>
+      <p>The Operation Underground Railroad's mobile site is a good example of Fitts' Law. Fitt's Law states that the amount of time required for someone to move a pointer (such as a finger on a touchscreen) is a function of the distance to the target divided by the overall size of the target (<a href="https://www.interaction-design.org/literature/topics/fitts-law" target="blank">What is Fitt's Law?</a>).</p>
       <p>As you can see at the bottom of the OUR site, there is a DONATE NOW button. The button is conveniently positioned at the bottom right corner of the screen where it's easily accessible by thumb or finger. The button is also large enough to easily click, but not so large that it covers up the rest of the site.</p>
     </div>
 
