fixed contrast issues with links

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -21,10 +21,6 @@
     <h1>Design Principles Document</h1>
     <h2>- Chris Fowler -</h2>
   </header>
-  
-  <nav>
-    <a href="../index.html">Home</a>
-  </nav>
 
   <main>
 
@@ -61,7 +57,7 @@
 
   <footer>
     <div id="copyright">
-      <span id="copyrightYear"></span> | Chris Fowler | <span id="lastUpdated"></span>
+      <span id="copyrightYear"></span> | <a href="../index.html">Chris Fowler</a> | <span id="lastUpdated"></span>
     </div>
   </footer>
 
