weather fortune finishes, week 2 name fixes

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -28,7 +28,7 @@
       <h3>Contrast</h3>
       <h4>The Church of Jesus Christ</h4>
       <a href="https://www.churchofjesuschrist.org" target="blank">churchofjesuschrist.org</a>
-      <img src="images/LDS_screenshot.jpg" alt="Mobile View Screenshot of ChurchOfJesusChrist.org">
+      <img src="images/lds-screenshot.jpg" alt="Mobile View Screenshot of ChurchOfJesusChrist.org">
       <p>There are a few examples of contrast right off the bat for The Church of Jesus Christ of Latter-Day Saint's website.</p>
       <p>First, the church's name is in a black font over a white background. Within the church's name, the words JESUS CHRIST are bigger to create emphasis and contrast.</p>
       <p>Moving down to the link navigation button, there are three white lines on a blue background. This creates contrast by changing from the white background above, and the button stands out since it is now white.</p>
@@ -39,7 +39,7 @@
       <h3>Fitts' Law</h3>
       <h4>Operation Underground Railroad</h4>
       <a href="https://www.ourrescue.org" target="blank">ourrescue.org</a>
-      <img src="images/OUR_screenshot.jpg" alt="Mobile View Screenshot of OURrescue.org">
+      <img src="images/our-screenshot.jpg" alt="Mobile View Screenshot of OURrescue.org">
       <p>The Operation Underground Railroad's mobile site is a good example of Fitts' Law. Fitt's Law states that the amount of time required for someone to move a pointer (such as a finger on a touchscreen) is a function of the distance to the target divided by the overall size of the target (<a href="https://www.interaction-design.org/literature/topics/fitts-law" target="blank">What is Fitt's Law?</a>).</p>
       <p>As you can see at the bottom of the OUR site, there is a DONATE NOW button. The button is conveniently positioned at the bottom right corner of the screen where it's easily accessible by thumb or finger. The button is also large enough to easily click, but not so large that it covers up the rest of the site.</p>
     </div>
@@ -48,7 +48,7 @@
       <h3>White Space</h3>
       <h4>Apple</h4>
       <a href="https://www.apple.com" target="blank">apple.com</a>
-      <img src="images/APPLE_screenshot.jpg" alt="Mobile View Screenshot of Apple.com">
+      <img src="images/apple-screenshot.jpg" alt="Mobile View Screenshot of Apple.com">
       <p>The Apple mobile site is a good example of white space. Generally, beginner designers shy away from white space because they think the design needs to be filled up. White space actually enhances the design by creating a clean, professional, and focused design. White space can also help lead a viewers attention from one element to another and create harmony within the design.</p>
       <p>The Apple site has ample white space around the middle element of their App Store heading. That is where the viewers eyes naturally go first. Then, the eyes move down to the app icons which are clean and crisp due to their spacing which is created by white space. Here, if you added more whitespace, the element would look disjointed. However, if you took away the whitespace that is there, the element would look cluttered and confusing.</p>
     </div>
