--- a/lesson3/html/color-scheme.html
+++ b/lesson3/html/color-scheme.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="author" content="Chris Fowler">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris Fowler's WDD230 Home Page | BYU-I</title>
-    <meta name="description" content="Chris Fowler's Course Portal Home Page for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
+    <title>Color Scheme | Chris Fowler's Weather Fortune Site | BYU-I</title>
+    <meta name="description" content="Chris Fowler's color scheme for the Weather Fortune Site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/small.css">
     <link rel="stylesheet" href="../css/medium.css">
@@ -15,32 +15,26 @@
 <body>
 
   <header>
-    <img class="logo" src="#" alt="WeatherFortune.com Site Logo">
+    <img class="main-logo" src="../images/logo.png" alt="WeatherFortune.com Site Logo">
     <h1>Weather Fortune</h1>
-    <h2>Color Scheme</h2>
+    <h2>- Color Scheme -</h2>
   </header>
 
   <nav>
     <ul>
       <li><a href="index.html">Site Plan Home</a> </li>
       <li><a href="target-audience.html">Target Audience</a> </li>
-      <li><a href="color-scheme.html">Color Scheme</a></li>
+      <li><a href="color-scheme.html" class="active">Color Scheme</a></li>
       <li><a href="typography.html">Typography</a> </li>
     </ul>
   </nav>
 
   <main>
-      <h2>Color Scheme</h2>
       <!-- Coolors Palette Widget -->
       <script src="https://coolors.co/palette-widget/widget.js"></script>
-      <script data-id="04785164226756311">new CoolorsPaletteWidget("04785164226756311", ["50514f","f25f5c","ffe066","247ba0","70c1b3"]);
-      </script>
+      <script data-id="08907669126437241">new CoolorsPaletteWidget("08907669126437241", ["fff914","ffc600","f25f5c","50514f","247ba0"]); </script>
 
-      <!-- Coolors Palette Widget
-      <script src="https://coolors.co/palette-widget/widget.js"></script>
-      <script data-id="04087629705936904">new CoolorsPaletteWidget("04087629705936904", ["6c756b","93acb5","96c5f7","a9d3ff","f2f4ff"]); </script> -->
-
-      <h2>How it Applies</h2>
+      <h3>How it Applies</h3>
       <p>reference the elements/content to which the colors will apply</p>
   </main>
 
@@ -49,8 +43,6 @@
         <span id="currentYear"></span>
         <span class="separate"> | </span>
         <span><a href="../../index.html" target="blank">Student Portal</a></span>
-        <span class="separate"> | </span> 
-        <span>Contact Information Goes Here</span>
     </div>
     <div>
         
