--- a/lesson3/html/index.html
+++ b/lesson3/html/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="author" content="Chris Fowler">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris Fowler's WDD230 Home Page | BYU-I</title>
-    <meta name="description" content="Chris Fowler's Course Portal Home Page for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
+    <title>Site Plan Home | Chris Fowler's Weather Fortune Site | BYU-I</title>
+    <meta name="description" content="Chris Fowler's Site Plan Home for the Weather Fortune site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/small.css">
     <link rel="stylesheet" href="../css/medium.css">
@@ -17,14 +17,14 @@
 <body>
 
   <header>
-    <img class="logo" src="#" alt="WeatherFortune.com Site Logo">
+    <img class="main-logo" src="../images/logo.png" alt="WeatherFortune.com Site Logo">
     <h1>Weather Fortune</h1>
-    <h2>Site Plan</h2>
+    <h2>- Site Plan -</h2>
   </header>
 
   <nav>
     <ul>
-      <li><a href="index.html">Site Plan Home</a> </li>
+      <li><a href="index.html" class="active">Site Plan Home</a> </li>
       <li><a href="target-audience.html">Target Audience</a> </li>
       <li><a href="color-scheme.html">Color Scheme</a></li>
       <li><a href="typography.html">Typography</a> </li>
@@ -32,17 +32,22 @@
   </nav>
 
   <main>
-      <h2>Site Title</h2>
-      <p>The site title will be "Weather Fortune".</p>
+      <h3>Site Title</h3>
+      <p>The site title will be "Weather Fortune". As the name indicates, this is a weather forecasting site.</p>
 
-      <h2>Site Purpose</h2>
-      <p>The site purpose is as follows...</p>
+      <h3>Site Purpose</h3>
+      <p>This site's purpose is to provide users with up-to-date and relevant weather information for the three towns of Preston, Fish Haven, and Soda Springs. The site will provide a current weather story with corresponding images and information.
+      </p>
+      <p>The site will also show contact information and a location map along with copyright information, the author's name, a terms of use link, and the current date.
+      </p>
 
-      <h2>Domain Name</h2>
+      <h3>Domain Name</h3>
       <p>The domain name is weatherfortune.com and it currently costs $12 per year.</p>
 
-      <h2>Logo</h2>
-      <img class="logo" src="#" alt="WeatherFortune.com Site Logo">
+      <h3>Logo</h3>
+      <p>This is the Weather Fortune site logo.</p>
+      <img class="logo" src="../images/logo.png" alt="WeatherFortune.com Site Logo">
+      <p>The logo is bright and inviting that also fits the purpose of the site. It is a vector image so it does not blur.</p>
   </main>
 
   <footer>
@@ -50,8 +55,6 @@
         <span id="currentYear"></span>
         <span class="separate"> | </span>
         <span><a href="../../index.html" target="blank">Student Portal</a></span>
-        <span class="separate"> | </span> 
-        <span>Contact Information Goes Here</span>
     </div>
     <div>
         
