--- a/lesson3/html/typography.html
+++ b/lesson3/html/typography.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="author" content="Chris Fowler">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris Fowler's WDD230 Home Page | BYU-I</title>
-    <meta name="description" content="Chris Fowler's Course Portal Home Page for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
+    <title>Typography | Chris Fowler's Weather Fortune Site | BYU-I</title>
+    <meta name="description" content="Chris Fowler's typography for the Weather Fortune site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/small.css">
     <link rel="stylesheet" href="../css/medium.css">
@@ -17,9 +17,9 @@
 <body>
 
   <header>
-    <img class="logo" src="#" alt="WeatherFortune.com Site Logo">
+    <img class="main-logo" src="../images/logo.png" alt="WeatherFortune.com Site Logo">
     <h1>Weather Fortune</h1>
-    <h2>Typography</h2>
+    <h2>- Typography -</h2>
   </header>
 
   <nav>
@@ -27,21 +27,20 @@
       <li><a href="index.html">Site Plan Home</a> </li>
       <li><a href="target-audience.html">Target Audience</a> </li>
       <li><a href="color-scheme.html">Color Scheme</a></li>
-      <li><a href="typography.html">Typography</a> </li>
+      <li><a href="typography.html" class="active">Typography</a> </li>
     </ul>
   </nav>
 
   <main>
-      <h2>Typography</h2>
-      <p>There are three fonts I will use on the Weather Fortune site. These fonts are:
+      <h3>Typography</h3>
+        <p>There are three fonts I will use on the Weather Fortune site. These fonts are:</p>
           <ul>
               <li><em class="bold mont-alt">Montserrat Alternates</em> (medium weight), a Sans-Serif font</li>
               <li><em class="bold mont">Montserrat</em> (regular weight), a Sans-Serif font</li>
               <li><em class="bold inco">Inconsolata</em> (medium weight), a Monospace font</li>
           </ul>
-      </p>
 
-      <h2>How They Apply</h2>
+      <h3>How They Apply</h3>
       <p><em class="bold mont-alt">Montserrat Alternates</em> is used for all heading elements. I chose this font for all site headings because it kind of has a cloudy feel to it that I felt would go well with a the Weather Fortune site.</p>
       <p><em class="bold inco">Inconsolata</em> is used for the footer element. I used this monospace font to set the footer apart somewhat, and because it has an informational feel to it.</p>
       <p><em class="bold mont">Montserrat</em> is used for all the other text in the main element. I chose this font for all non-heading elements because it pairs well with Montserrat Alternates, has a simple, clean feel, and is easy to read. In general, sans-serif fonts work very well on the web.</p>
@@ -52,8 +51,6 @@
         <span id="currentYear"></span>
         <span class="separate"> | </span>
         <span><a href="../../index.html" target="blank">Student Portal</a></span>
-        <span class="separate"> | </span> 
-        <span>Contact Information Goes Here</span>
     </div>
     <div>
         
