added color scheme description

--- a/lesson3/html/color-scheme.html
+++ b/lesson3/html/color-scheme.html
@@ -35,7 +35,7 @@
       <script data-id="08907669126437241">new CoolorsPaletteWidget("08907669126437241", ["fff914","ffc600","f25f5c","50514f","247ba0"]); </script>
 
       <h3>How it Applies</h3>
-      <p>reference the elements/content to which the colors will apply</p>
+      <p>#fff914 applies to the h1 and h2 in the header. #ffc600 applies to the link color and the link-hover background color. It also applies to the date color in the footer. #f25f5c applies to all other headings. #50514f applies to the header and footer backgrounds and the main body copy. #247ba0 applies to the link background color.</p>
   </main>
 
   <footer>
