--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -62,7 +62,7 @@
   </footer>
 
   <!-- Inserts today's date and the date the document was last modified -->
-  <script src="js/dates.js"></script>
+  <script src="../lesson2/js/dates.js"></script>
 
 </body>
 
