"last updated" links

--- a/lesson3/html/index.html
+++ b/lesson3/html/index.html
@@ -67,7 +67,7 @@
   </footer>
 
   <!-- Inserts today's date and the date the document was last modified -->
-  <script src="../js/dates.js"></script>
+  <script src="../../lesson3/js/dates.js"></script>
 
 </body>
 
