--- a/lesson3/html/typography.html
+++ b/lesson3/html/typography.html
@@ -63,7 +63,7 @@
   </footer>
 
   <!-- Inserts today's date and the date the document was last modified -->
-  <script src="../js/dates.js"></script>
+  <script src="../../lesson3/js/dates.js"></script>
 
 </body>
 
