updated color scheme

--- a/lesson3/html/color-scheme.html
+++ b/lesson3/html/color-scheme.html
@@ -30,12 +30,10 @@
   </nav>
 
   <main>
-      <!-- Coolors Palette Widget -->
-      <script src="https://coolors.co/palette-widget/widget.js"></script>
-      <script data-id="08907669126437241">new CoolorsPaletteWidget("08907669126437241", ["fff914","ffc600","f25f5c","50514f","247ba0"]); </script>
+    <a href="https://coolors.co/fff700-af110e-50514f-195671" target="blank"><img class="color-scheme" src="../images/color-scheme.png" alt="color scheme photograph"></a>
 
-      <h3>How it Applies</h3>
-      <p>#fff914 applies to the h1 and h2 in the header. #ffc600 applies to the link color and the link-hover background color. It also applies to the date color in the footer. #f25f5c applies to all other headings. #50514f applies to the header and footer backgrounds and the main body copy. #247ba0 applies to the link background color.</p>
+    <h3>How it Applies</h3>
+    <p>#FFF700 applies to the h1 and h2 in the header. It also applies to the link color and the link:hover background color. It also applies to the date color in the footer. #AF110E applies to all other headings. #50514f applies to the header and footer backgrounds and the main body copy. #195671 applies to the link background color and the link:hover color.</p>
   </main>
 
   <footer>
