--- a/lesson3/html/target-audience.html
+++ b/lesson3/html/target-audience.html
@@ -94,7 +94,7 @@
   </footer>
 
   <!-- Inserts today's date and the date the document was last modified -->
-  <script src=../../lesson3/js/dates.js"></script>
+  <script src="../../lesson3/js/dates.js"></script>
 
 </body>
 
