preston page updated draft

--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -18,13 +18,15 @@
 
   <header>
     <img class="main-logo" src="images/logo.png" alt="WeatherFortune.com Site Logo">
-    <h1>Weather Fortune</h1>
-    <div>~ The Future of Your Weather ~</div>  <!-- Change Font -->
+    <div class="title-motto">
+      <h1>Weather Fortune</h1>
+      <div class="motto">~ The Future of Your Weather ~</div>  <!-- Change Font -->
+    </div>
   </header>
 
   <nav>
     <ul class="navigation">
-      <li><a id="menu-button" href="#" onclick="toggleMenu()">&equiv; Menu</a></li>
+      <li><a id="menu-button" href="#" onclick="toggleMenu()">Menu</a></li>
       <li><a href="#">Home</a> </li>
       <li><a class="active" href="#">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
