--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="author" content="Chris Fowler">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Plan Home | Chris Fowler's Weather Fortune Site | BYU-I</title>
-    <meta name="description" content="Chris Fowler's Site Plan Home for the Weather Fortune site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
+    <title>Preston Idaho Weather | Chris Fowler's Weather Fortune Site | BYU-I</title>
+    <meta name="description" content="Preston Idaho page for Chris Fowler's Weather Fortune site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
