--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -110,7 +110,13 @@
       </div>
     </div>
 
-    <div class="holder">Article</div>
+    <article>
+      <img class="article-img" src="images/costumes1.jpg" alt="Two Boys in Mummy Costumes">
+      <h3 class="article-title">Halloween Costume Contest</h3>
+      <h4 class="article-title">by Barry A. Live</h4>
+      <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut odit nihil doloribus nam quisquam necessitatibus beatae veniam sint, praesentium consequuntur aperiam minima fugit accusantium? Earum nam ab veritatis repellendus a? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa molestiae expedita vitae optio, impedit saepe quasi fugit, doloribus assumenda, natus in rem sit earum tenetur inventore? Inventore repellendus unde id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit explicabo asperiores corporis accusantium tempore obcaecati nihil, voluptatum ipsam sint perspiciatis voluptates tenetur ipsum, nostrum eaque quidem, soluta corrupti totam a! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ea ut, quaerat amet eaque sint eos deserunt distinctio ipsam velit tenetur minima totam numquam error modi enim nisi dolorem dicta.</p>
+    </article>
+
     <div class="holder">Contact Info</div>
 
   </main>
