--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -50,19 +50,19 @@
       <section class="weather-summary">
         <h3 class="summary-title">Weather Summary</h3>
         <div class="names">
-          Currently:</br>
+          Currently:<br>
           High:</br>
-          Wind Chill:</br>
-          Humidity:</br>
-          Wind Speed:</br>
+          Wind Chill:<br>
+          Humidity:<br>
+          Wind Speed:<br>
         </div>
 
         <div class="values">
-          Sunny</br>
-          76&deg; F</br>
-          &deg;</br>
-          76%</br>
-          5 mph</br>
+          Sunny<br>
+          76&deg; F<br>
+          &deg;<br>
+          76%<br>
+          5 mph<br>
         </div>
       </section>
     </div>
