--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -51,7 +51,7 @@
         <h3 class="summary-title">Weather Summary</h3>
         <div class="names">
           Currently:<br>
-          High:</br>
+          High:<br>
           Wind Chill:<br>
           Humidity:<br>
           Wind Speed:<br>
