--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -72,7 +72,7 @@
       <div class="tuesday">
         <h4>Tue</h4>
         <section>
-          <img class="forecast-icon" src="images/sunny.webp" alt="FORECAST ICON">     <!-- CHANGE ALT AND SRC -->
+          <img class="forecast-icon" src="images/sunny.webp" alt="Sunny ICON">
           89&deg; F
         </section>
       </div>
@@ -80,7 +80,7 @@
       <div class="wednesday">
         <h4>Wed</h4>
         <section>
-          <img class="forecast-icon" src="images/sunny.webp" alt="FORECAST ICON">     <!-- CHANGE ALT AND SRC -->
+          <img class="forecast-icon" src="images/sunny.webp" alt="Sunny ICON">
           87&deg; F
         </section>
       </div>
@@ -88,7 +88,7 @@
       <div class="thursday">
         <h4>Thur</h4>
         <section>
-          <img class="forecast-icon" src="images/partly.webp" alt="FORECAST ICON">     <!-- CHANGE ALT AND SRC -->
+          <img class="forecast-icon" src="images/partly.webp" alt="Partly Cloudy ICON">
           78&deg; F
         </section>
       </div>
@@ -96,7 +96,7 @@
       <div class="friday">
         <h4>Fri</h4>
         <section>
-          <img class="forecast-icon" src="images/sunny.webp" alt="FORECAST ICON">     <!-- CHANGE ALT AND SRC -->
+          <img class="forecast-icon" src="images/sunny.webp" alt="Sunny ICON">
           75&deg; F
         </section>
       </div>
@@ -104,7 +104,7 @@
       <div class="saturday">
         <h4>Sat</h4>
         <section>
-          <img class="forecast-icon" src="images/cloudy.webp" alt="FORECAST ICON">     <!-- CHANGE ALT AND SRC -->
+          <img class="forecast-icon" src="images/cloudy.webp" alt="Cloudy ICON">
           72&deg; F
         </section>
       </div>
