week 6 initial commit

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <li>Lesson 02: <a href="/lesson2/design-principles.html">Design Principles</a> </li>
       <li>Lesson 03: <a href="/lesson3/html/index.html">Weather Fortune Site Plan</a> </li>
       <li>Lesson 04: <a href="/lesson4/preston-4.html">Preston Idaho Page</a> | <a href="/lesson5/preston-5.html">Preston 5</a> </li>
+      <li>Lesson 06: <a href="/lesson6/preston-6.html">Wind Chill & Image Optimization</a> </li>
     </ul>
   </nav>
 
@@ -41,7 +42,8 @@
     </div>
   </footer>
 
-  <!-- Inserts today's date and the date the document was last modified -->
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script src="/lesson1/js/webfontload.js"></script>
   <script src="/lesson1/js/dates.js"></script>
 
 </body>
