added "Lesson 5: " before Preston 5 link in portal

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <ul>
       <li>Lesson 02: <a href="/lesson2/design-principles.html">Design Principles</a> </li>
       <li>Lesson 03: <a href="/lesson3/html/index.html">Weather Fortune Site Plan</a> </li>
-      <li>Lesson 04: <a href="/lesson4/preston-4.html">Preston Idaho Page</a> | <a href="/lesson5/preston-5.html">Preston 5</a> </li>
+      <li>Lesson 04: <a href="/lesson4/preston-4.html">Preston Idaho Page</a> | Lesson 5: <a href="/lesson5/preston-5.html">Preston 5</a> </li>
       <li>Lesson 06: <a href="/lesson6/preston-6.html">Wind Chill & Image Optimization</a> </li>
     </ul>
   </nav>
