--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <li>Lesson 03: <a href="/lesson3/html/index.html">Weather Fortune Site Plan</a> </li>
       <li>Lesson 04: <a href="/lesson4/preston-4.html">Preston Idaho Page</a> | Lesson 5: <a href="/lesson5/preston-5.html">Preston 5</a> </li>
       <li>Lesson 06: <a href="/lesson6/preston-6.html">Wind Chill & Image Optimization</a> </li>
+      <li>Presentation: <a href="/lesson1/images/presentation.mp4">Pseudo Classes & Elements</a> </li>
     </ul>
   </nav>
 
