--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <li>Lesson 05: <a href="/lesson5/preston-5.html">Preston 5</a> </li>
       <li>Lesson 06: <a href="/lesson6/preston-6.html">Wind Chill & Image Optimization</a> </li>
       <li>Presentation: <a href="/lesson1/images/presentation.mp4">Pseudo Classes & Elements</a> </li>
-      <li>Lesson 07: <a href="/lesson7/lazyload.html">Progressive Image Loading</a> </li>
+      <li>Lesson 07: <a href="/lesson7/lazyload.html">Progressive Image Loading</a> | 
+        <a href="/lesson7/gallery-7.html">Gallery</a> </li>
       
     </ul>
   </nav>
