--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -8,7 +8,7 @@
   <title>Progressive Image Loading | Chris Fowler | WDD230 BYU-I</title>
   <meta name="description" content="Progressive Image Loading demonstration; Chris Fowler. For Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/small.css">
+  <link rel="stylesheet" href="css/lazysmall.css">
 </head>
 
 <body>
