--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>  <!-- CHANGE STUFF HERE STILL!! -->
+<head>
     <meta charset="UTF-8">
     <meta name="author" content="Chris Fowler">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preston Idaho Weather | Chris Fowler's Weather Fortune Site | BYU-I</title>
-    <meta name="description" content="Preston Idaho page for Chris Fowler's Weather Fortune site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
+    <title>Weather Gallery | Chris Fowler's Weather Fortune Site | BYU-I</title>
+    <meta name="description" content="Gallery page for Chris Fowler's Weather Fortune site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
