--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <li>Presentation: <a href="/lesson1/images/presentation.mp4">Pseudo Classes & Elements</a> </li>
       <li>Lesson 07: <a href="/lesson7/lazyload.html">Progressive Image Loading</a> | 
         <a href="/lesson7/gallery-7.html">Gallery</a> </li>
+      <li>Lesson 08: <a href="/lesson8/tablebuild.html">Table Build</a></li>
       
     </ul>
   </nav>
