--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -9,13 +9,14 @@
     <meta name="description" content="Chris Fowler's HTML Table Build Demo; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/tablesmall.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body> 
 
   <main>
       <h1>Table Build Demo</h1>
-
+      
       <table>
           <thead>
               <tr>
@@ -83,6 +84,8 @@
 
   </footer>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script src="js/webfontload.js"></script>
   <script src="js/dates.js"></script>
 
 </body>
