--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
   <nav>
     <h2>WDD 230: Assignment Portal</h2>
     <ul>
-      <li>Lesson 02: <a href="/lesson2/design-principles.html">Design Principles</a> </li>
-      <li>Lesson 03: <a href="/lesson3/html/index.html">Weather Fortune Site Plan</a> </li>
-      <li>Lesson 04: <a href="/lesson4/preston-4.html">Preston Idaho Page</a> </li>
-      <li>Lesson 05: <a href="/lesson5/preston-5.html">Preston 5</a> </li>
-      <li>Lesson 06: <a href="/lesson6/preston-6.html">Wind Chill & Image Optimization</a> </li>
-      <li>Presentation: <a href="/lesson1/images/presentation.mp4">Pseudo Classes & Elements</a> </li>
+      <li>Lesson 02: <a href="/lesson2/design-principles.html">Design Principles</a></li>
+      <li>Lesson 03: <a href="/lesson3/html/index.html">Weather Fortune Site Plan</a></li>
+      <li>Lesson 04: <a href="/lesson4/preston-4.html">Preston Idaho Page</a></li>
+      <li>Lesson 05: <a href="/lesson5/preston-5.html">Preston 5</a></li>
+      <li>Lesson 06: <a href="/lesson6/preston-6.html">Wind Chill & Image Optimization</a></li>
+      <li>Presentation: <a href="/lesson1/images/presentation.mp4">Pseudo Classes & Elements</a></li>
       <li>Lesson 07: <a href="/lesson7/lazyload.html">Progressive Image Loading</a> | 
-        <a href="/lesson7/gallery-7.html">Gallery</a> </li>
-      <li>Lesson 08: <a href="/lesson8/tablebuild.html">Table Build</a></li>
+        <a href="/lesson7/gallery-7.html">Gallery</a></li>
+      <li>Lesson 08: <a href="/lesson8/tablebuild.html">Table Build</a> | 
+        <a href="/lesson8/stormcenter.html">Storm Center</a></li>
       
     </ul>
   </nav>
