h3 to h2, link to stormcenter.html on thanks.html

--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -41,7 +41,7 @@
   </nav>  
 
   <main>
-      <h3>Storm Reporting Center</h3>
+      <h2>Storm Reporting Center</h2>
       <form>
       </form>
 
@@ -58,8 +58,8 @@
           <fieldset>
               <legend>Storm Information</legend>
               <label class="top">Storm Date <input type="date" name="date"></label>
-              <label class="top">Storm Type <input list="storms">
-                <datalist id="storms" name="type">
+              <label class="top">Storm Type <input list="storms" name="type">
+                <datalist id="storms">
                     <option value="Blizzard"></option>
                     <option value="Flash Flood"></option>
                     <option value="Hail Storm"></option>
