--- a/lesson8/thanks.html
+++ b/lesson8/thanks.html
@@ -35,13 +35,13 @@
       <li><a href="../lesson6/preston-6.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
-      <li><a class="active" href="#">Storm Center</a></li>
+      <li><a class="active" href="stormcenter.html">Storm Center</a></li>
       <li><a href="../lesson7/gallery-7.html">Gallery</a></li>
     </ul>
   </nav>  
 
   <main>
-      <h3 class="thanks">Thank you for reporting the storm!</h3>
+      <h2 class="thanks">Thank you for reporting the storm!</h2>
       <p class="thanks">The future of your weather is in good hands with your report.</p>      
   </main>
 
