--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSON Prophets | Chris Fowler's JSON Beginning | BYU-I</title>
     <meta name="description" content="Prophets page for Chris Fowler's JSON Beginning; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&family=Special+Elite&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/prophets.css">
 </head>
 
@@ -24,7 +26,8 @@
     </footer>
 
     <script src="js/prophets.js"></script>
-    
+    <script src="js/webfontload.js"></script>
+
 </body>
 
 </html>             <!-- CHANGE THINGS !!!! -->
