prophet images lazy load capability

--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -10,9 +10,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Special+Elite&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/prophets.css">
+    <script src="js/prophets.js" defer></script>
+    <script src="js/webfontload.js" defer></script>
 </head>
 
 <body>
+
     <header>
         <h1>Latter-day Prophets</h1>
     </header>
@@ -24,9 +27,6 @@
     <footer>
         &copy; 2020 <a href="../index.html">Chris Fowler</a> | BYU-Idaho | WDD 230
     </footer>
-
-    <script src="js/prophets.js"></script>
-    <script src="js/webfontload.js"></script>
 
 </body>
 
