--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSON Prophets | Chris Fowler's JSON Beginning | BYU-I</title>
     <meta name="description" content="Prophets page for Chris Fowler's JSON Beginning; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Special+Elite&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/prophets.css">
     <script src="js/prophets.js" defer></script>
