--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <a href="/lesson7/gallery-7.html">Gallery</a></li>
       <li>Lesson 08: <a href="/lesson8/tablebuild.html">Table Build</a> | 
         <a href="/lesson8/stormcenter.html">Storm Center</a></li>
-      <li>Lesson 09: <a href="lesson9/prophets.html">JSON Prophets</a> | <a href="#">Weather Fortune Home</a></li>
+      <li>JSON: <a href="lesson9/prophets.html">JSON Prophets</a></li>
+      <li>Lesson 09: <a href="lesson9/index.html">Weather Fortune Home</a> | 
+        <a href="lesson9/home-wireframes.html">Home Wireframes</a></li>
       
     </ul>
   </nav>
