home page wireframe link href="#"

--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -68,7 +68,7 @@
 
     <div class="contact-div">
       <img class="contact-map" src="images/map.jpg" alt="Map of Our Location">
-      <section class="contact-info">
+      <div class="contact-info">
         &#9993; weatherfortune@email.com
         <br>
         &#9742; 208-WEA-THER
@@ -78,7 +78,7 @@
         <a href="https://www.facebook.com" target="blank"><img class="social-icon" src="images/facebook.png" alt="Facebook Icon"></a>
         <a href="https://www.instagram.com" target="blank"><img class="social-icon" src="images/instagram.png" alt="Instagram Icon"></a>
         <a href="https://www.twitter.com" target="blank"><img class="social-icon" src="images/twitter.png" alt="Twitter Icon"></a>
-      </section>
+      </div>
     </div>
 
   </main>
@@ -90,7 +90,7 @@
       <span class="separate"> | </span>
       <span><a href="../index.html" target="blank">Chris Fowler</a></span>
       <span class="separate"> | </span>
-      <span><a href="home-wireframes.html">home-wireframes</a></span>
+      <span><a href="#">home-wireframes</a></span>
     </div>
 
     <div class="dates">
