article.clearfix and margin on town-info div

--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -59,7 +59,7 @@
 
     <div class="town-info"></div>
 
-    <article>
+    <article class="clearfix">
       <img class="article-img" src="images/article-img-edit.jpg" alt="**************************">
       <h3 class="article-title">Snapshots of the Near-Future</h3>
       <h4 class="article-title">by W. Ether Mann</h4>
