--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -90,7 +90,7 @@
       <span class="separate"> | </span>
       <span><a href="../index.html" target="blank">Chris Fowler</a></span>
       <span class="separate"> | </span>
-      <span><a href="#">home-wireframes</a></span>
+      <span><a href="home-wireframes.html">home-wireframes</a></span>
     </div>
 
     <div class="dates">
