--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -31,11 +31,11 @@
   <nav>
     <ul class="navigation">
       <li><a id="menu-button" href="#" onclick="toggleMenu()">Menu</a></li>
-      <li><a href="#">Home</a> </li>
+      <li><a href="../lesson9/index.html">Home</a> </li>
       <li><a href="../lesson6/preston-6.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
-      <li><a href="#">Storm Center</a></li>
+      <li><a href="../lesson8/stormcenter.html">Storm Center</a></li>
       <li><a class="active" href="#">Gallery</a></li>
     </ul>
   </nav>  
