--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -88,7 +88,7 @@
     <div id="copyright">
       <span id="currentYear"></span>
       <span class="separate"> | </span>
-      <span><a href="../index.html" target="blank">Chris Fowler</a></span>
+      <span><a href="../index.html">Chris Fowler</a></span>
       <span class="separate"> | </span>
       <span><a href="home-wireframes.html">home-wireframes</a></span>
     </div>
