updated more links

--- a/lesson3/html/color-scheme.html
+++ b/lesson3/html/color-scheme.html
@@ -40,7 +40,7 @@
     <div id="copyright">
         <span id="currentYear"></span>
         <span class="separate"> | </span>
-        <span><a href="../../index.html" target="blank">Student Portal</a></span>
+        <span><a href="../../index.html">Student Portal</a></span>
     </div>
     <div>
         
