--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -40,7 +40,7 @@
 
     <footer>
         <span>&copy;2020 | </span>
-        <a href="../index.html" target="blank">Chris Fowler</a>
+        <a href="../index.html">Chris Fowler</a>
     </footer>
 
     <script src="js/lazyload.js" defer></script>
