--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -143,7 +143,7 @@
     <div id="copyright">
       <span id="currentYear"></span>
       <span class="separate"> | </span>
-      <span><a href="../index.html" target="blank">Chris Fowler</a></span>
+      <span><a href="../index.html">Chris Fowler</a></span>
     </div>
 
     <div class="dates">
