--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <li>Lesson 09: <a href="lesson9/prophets.html">JSON Prophets</a> | 
         <a href="lesson9/index.html">Weather Fortune Home</a> | 
         <a href="lesson9/home-wireframes.html">Home Wireframes</a></li>
+      <li>Lesson 10: <a href="lesson10/preston-10.html">Preston 10</a></li>
       
     </ul>
   </nav>
