fixed section warnings

--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -78,45 +78,47 @@
 
     <div class="forecast-div">
       <h3 class="forecast-title">5 Day Forecast</h3>
-      <div id="day1" class="day">
+
+      <section id="day1" class="day">
         <h4>Tue</h4>
-        <section>
+        <div>
           <img class="forecast-icon" src="#" alt="Current Weather Conditions Icon">
           <span></span>
-        </section>
-      </div>
+        </div>
+      </section>
       
-      <div id="day2" class="day">
+      <section id="day2" class="day">
         <h4>Wed</h4>
-        <section>
+        <div>
           <img class="forecast-icon" src="#" alt="Current Weather Conditions Icon">
           <span></span>
-        </section>
-      </div>
+        </div>
+      </section>
 
-      <div id="day3" class="day">
+      <section id="day3" class="day">
         <h4>Thur</h4>
-        <section>
+        <div>
           <img class="forecast-icon" src="#" alt="Current Weather Conditions Icon">
           <span></span>
-        </section>
-      </div>
+        </div>
+      </section>
 
-      <div id="day4" class="day">
+      <section id="day4" class="day">
         <h4>Fri</h4>
-        <section>
+        <div>
           <img class="forecast-icon" src="#" alt="Current Weather Conditions Icon">
           <span></span>
-        </section>
-      </div>
+        </div>
+      </section>
       
-      <div id="day5" class="day">
+      <section id="day5" class="day">
         <h4>Sat</h4>
-        <section>
+        <div>
           <img class="forecast-icon" src="#" alt="Current Weather Conditions Icon">
           <span></span>
-        </section>
-      </div>
+        </div>
+      </section>
+
     </div>
 
     <article class="clearfix">
