changed contact section to div

--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -130,7 +130,7 @@
 
     <div class="contact-div">
       <img class="contact-map" src="images/map.jpg" alt="Map of Preston Area">
-      <section class="contact-info">
+      <div class="contact-info">
         &#9993; weatherfortune@email.com
         <br>
         &#9742; 208-WEA-THER
@@ -140,7 +140,7 @@
         <a href="https://www.facebook.com" target="blank"><img class="social-icon" src="images/facebook.png" alt="Facebook Icon"></a>
         <a href="https://www.instagram.com" target="blank"><img class="social-icon" src="images/instagram.png" alt="Instagram Icon"></a>
         <a href="https://www.twitter.com" target="blank"><img class="social-icon" src="images/twitter.png" alt="Twitter Icon"></a>
-      </section>
+      </>
     </div>
 <!-- CHANGE STUFF HERE STILL!! -->
   </main>
