--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>  <!-- CHANGE STUFF HERE STILL!! -->
+<head>
     <meta charset="UTF-8">
     <meta name="author" content="Chris Fowler">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preston Idaho Weather | Chris Fowler's Weather Fortune Site | BYU-I</title>
-    <meta name="description" content="Preston Idaho page for Chris Fowler's Weather Fortune site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
+    <meta name="description" content="Preston Idaho Weather Forecast; for Chris Fowler's Weather Fortune site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
@@ -44,7 +44,7 @@
       <li><a href="../lesson7/gallery-7.html">Gallery</a></li>
     </ul>
   </nav>  
-<!-- CHANGE STUFF HERE STILL!! -->
+
   <main>
 
     <h2>Preston Idaho</h2>
@@ -140,9 +140,9 @@
         <a href="https://www.facebook.com" target="blank"><img class="social-icon" src="images/facebook.png" alt="Facebook Icon"></a>
         <a href="https://www.instagram.com" target="blank"><img class="social-icon" src="images/instagram.png" alt="Instagram Icon"></a>
         <a href="https://www.twitter.com" target="blank"><img class="social-icon" src="images/twitter.png" alt="Twitter Icon"></a>
-      </>
+      </div>
     </div>
-<!-- CHANGE STUFF HERE STILL!! -->
+
   </main>
 
   <footer>
@@ -162,5 +162,5 @@
   </footer>
 
 </body>
-<!-- CHANGE STUFF HERE STILL!! -->
+
 </html>
