--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
   <meta charset="UTF-8">
   <meta name="author" content="Chris Fowler">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chris Fowler's WDD230 Home Page | BYU-I</title>
-  <meta name="description" content="Chris Fowler's Course Portal Home Page for Web Design and Development I (WDD 230).
-    This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
+  <title>Chris Fowler's WDD230 Course Portal | BYU-I</title>
+  <meta name="description" content="Chris Fowler's Course Portal Home for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
   <link rel="stylesheet" href="/lesson1/css/normalize.css">
   <link rel="stylesheet" href="/lesson1/css/small.css">
   <link rel="stylesheet" href="/lesson1/css/medium.css">
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Inknut+Antiqua:wght@800&family=Open+Sans&display=swap"
         rel="stylesheet">
+  <!-- ADD MY OWN FAVICON !! -->
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
+  <script src="/lesson1/js/webfontload.js" defer></script>
+  <script src="/lesson1/js/dates.js" defer></script>
 </head>
 
 <body>
@@ -39,6 +42,7 @@
         <a href="lesson9/index.html">Weather Fortune Home</a> | 
         <a href="lesson9/home-wireframes.html">Home Wireframes</a></li>
       <li>Lesson 10: <a href="lesson10/preston-10.html">Preston 10</a></li>
+      <li>Lesson 11: <a href="lesson11/index.html">Weather Fortune</a></li>
       
     </ul>
   </nav>
@@ -52,10 +56,6 @@
       <span id="currentDate"></span> <span id="separate"> | </span> <span id="lastUpdated"></span>
     </div>
   </footer>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-  <script src="/lesson1/js/webfontload.js"></script>
-  <script src="/lesson1/js/dates.js"></script>
 
 </body>
 
