--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -46,7 +46,7 @@
 
   <main>
 
-    <h2>Preston, Idaho</h2>
+    <h2 id="city-id">Preston, Idaho</h2>
 
     <div class="hero-div">
       <picture>
@@ -66,11 +66,11 @@
         </div>
         
         <div class="values">
-          <span id="description">Sunny</span><br>
-          <span id="currenttemp">34</span>&deg; F<br>     <!-- was summary-tempF -->
-          <span id="windspeed">7</span> mph<br>     <!-- was summary-windspeed -->
-          <span id="windchill"></span><br>             <!-- was summary-chillF -->
-          <span id="humidity">52</span>%<br>        <!-- was summary-humidity -->
+          <span id="description"></span><br>
+          <span id="currenttemp"></span>&deg; F<br>
+          <span id="windspeed"></span> mph<br>
+          <span id="windchill"></span><br>
+          <span id="humidity"></span>%<br>
         </div>
       </section>
     </div>
