added unique hero-img to sodasprings & fishhaven

--- a/lesson11/fish-haven.html
+++ b/lesson11/fish-haven.html
@@ -50,9 +50,9 @@
 
     <div class="hero-div">
       <picture>
-        <source media="(max-width: 500px)" srcset="images/preston500.jpg">
-        <source media="(max-width: 800px)" srcset="images/preston800.jpg">
-        <img class="hero-img" src="images/preston1280.jpg" alt="Preston Idaho's Famous Potatoes">
+        <source media="(max-width: 500px)" srcset="images/fishhaven500.jpg">
+        <source media="(max-width: 800px)" srcset="images/fishhaven800.jpg">
+        <img class="hero-img" src="images/fishhaven1280.jpg" alt="Man Fishing at the Lake with Mountain Backdrop">
       </picture>
 
       <section class="weather-summary">
