--- a/lesson11/soda-springs.html
+++ b/lesson11/soda-springs.html
@@ -50,9 +50,9 @@
 
     <div class="hero-div">
       <picture>
-        <source media="(max-width: 500px)" srcset="images/preston500.jpg">
-        <source media="(max-width: 800px)" srcset="images/preston800.jpg">
-        <img class="hero-img" src="images/preston1280.jpg" alt="Preston Idaho's Famous Potatoes">
+        <source media="(max-width: 500px)" srcset="images/sodasprings500.jpg">
+        <source media="(max-width: 800px)" srcset="images/sodasprings800.jpg">
+        <img class="hero-img" src="images/sodasprings1280.jpg" alt="Oregon Trail Trading Post Near Soda Springs">
       </picture>
 
       <section class="weather-summary">
