took dashes out of file/folder names s-s, f-h, s-c

--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -8,9 +8,9 @@
     <title>Preston Idaho Weather | Chris Fowler's Weather Fortune Site | BYU-I</title>
     <meta name="description" content="Preston Idaho Weather Forecast; for Chris Fowler's Weather Fortune site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/soda-springs-css/small.css">
-    <link rel="stylesheet" href="css/soda-springs-css/medium.css">
-    <link rel="stylesheet" href="css/soda-springs-css/large.css">
+    <link rel="stylesheet" href="css/fishhaven-css/small.css">
+    <link rel="stylesheet" href="css/fishhaven-css/medium.css">
+    <link rel="stylesheet" href="css/fishhaven-css/large.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Montserrat&family=Montserrat+Alternates:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
@@ -37,22 +37,22 @@
       <li><a id="menu-button" href="#" onclick="toggleMenu()">Menu</a></li>
       <li><a href="index.html">Home</a> </li>
       <li><a href="preston.html">Preston</a></li>
-      <li><a class="active" href="#">Soda Springs</a></li>
-      <li><a href="fish-haven.html">Fish Haven</a></li>
-      <li><a href="storm-center.html">Storm Center</a></li>
+      <li><a href="sodasprings.html">Soda Springs</a></li>
+      <li><a class="active" href="#">Fish Haven</a></li>
+      <li><a href="stormcenter.html">Storm Center</a></li>
       <li><a href="gallery.html">Gallery</a></li>
     </ul>
   </nav>  
 
   <main>
 
-    <h2 id="city-id">Soda Springs, Idaho</h2>
+    <h2 id="city-id">Fish Haven, Idaho</h2>
 
     <div class="hero-div">
       <picture>
-        <source media="(max-width: 500px)" srcset="images/sodasprings500.jpg">
-        <source media="(max-width: 800px)" srcset="images/sodasprings800.jpg">
-        <img class="hero-img" src="images/sodasprings1280.jpg" alt="Oregon Trail Trading Post Near Soda Springs">
+        <source media="(max-width: 500px)" srcset="images/fishhaven500.jpg">
+        <source media="(max-width: 800px)" srcset="images/fishhaven800.jpg">
+        <img class="hero-img" src="images/fishhaven1280.jpg" alt="Man Fishing at the Lake with Mountain Backdrop">
       </picture>
 
       <section class="weather-summary">
