--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -8,9 +8,9 @@
     <title>Storm Center | Chris Fowler's Weather Fortune Site | BYU-I</title>
     <meta name="description" content="Storm Center page for Chris Fowler's Weather Fortune site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/storm-center-css/small.css">
-    <link rel="stylesheet" href="css/storm-center-css/medium.css">
-    <link rel="stylesheet" href="css/storm-center-css/large.css">
+    <link rel="stylesheet" href="css/stormcenter-css/small.css">
+    <link rel="stylesheet" href="css/stormcenter-css/medium.css">
+    <link rel="stylesheet" href="css/stormcenter-css/large.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Montserrat&family=Montserrat+Alternates:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
@@ -39,8 +39,8 @@
       <li><a id="menu-button" href="#" onclick="toggleMenu()">Menu</a></li>
       <li><a href="index.html">Home</a> </li>
       <li><a href="preston.html">Preston</a></li>
-      <li><a href="soda-springs.html">Soda Springs</a></li>
-      <li><a href="fish-haven.html">Fish Haven</a></li>
+      <li><a href="sodasprings.html">Soda Springs</a></li>
+      <li><a href="fishhaven.html">Fish Haven</a></li>
       <li><a class="active" href="#">Storm Center</a></li>
       <li><a href="gallery.html">Gallery</a></li>
     </ul>
