--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -38,9 +38,9 @@
       <li><a id="menu-button" href="#" onclick="toggleMenu()">Menu</a></li>
       <li><a class="active" href="#">Home</a> </li>
       <li><a href="preston.html">Preston</a></li>
-      <li><a href="soda-springs.html">Soda Springs</a></li>
-      <li><a href="fish-haven.html">Fish Haven</a></li>
-      <li><a href="storm-center.html">Storm Center</a></li>
+      <li><a href="sodasprings.html">Soda Springs</a></li>
+      <li><a href="fishhaven.html">Fish Haven</a></li>
+      <li><a href="stormcenter.html">Storm Center</a></li>
       <li><a href="gallery.html">Gallery</a></li>
     </ul>
   </nav>  
