updated forecast icon img alt="" in weather-api.js

--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -81,7 +81,7 @@
       <section id="day1" class="day">
         <h4>Tue</h4>
         <div>
-          <img class="forecast-icon" src="#" alt="Current Weather Conditions Icon">
+          <img class="forecast-icon" src="#" alt="#">
           <span></span>
         </div>
       </section>
@@ -89,7 +89,7 @@
       <section id="day2" class="day">
         <h4>Wed</h4>
         <div>
-          <img class="forecast-icon" src="#" alt="Current Weather Conditions Icon">
+          <img class="forecast-icon" src="#" alt="#">
           <span></span>
         </div>
       </section>
@@ -97,7 +97,7 @@
       <section id="day3" class="day">
         <h4>Thur</h4>
         <div>
-          <img class="forecast-icon" src="#" alt="Current Weather Conditions Icon">
+          <img class="forecast-icon" src="#" alt="#">
           <span></span>
         </div>
       </section>
@@ -105,7 +105,7 @@
       <section id="day4" class="day">
         <h4>Fri</h4>
         <div>
-          <img class="forecast-icon" src="#" alt="Current Weather Conditions Icon">
+          <img class="forecast-icon" src="#" alt="#">
           <span></span>
         </div>
       </section>
@@ -113,7 +113,7 @@
       <section id="day5" class="day">
         <h4>Sat</h4>
         <div>
-          <img class="forecast-icon" src="#" alt="Current Weather Conditions Icon">
+          <img class="forecast-icon" src="#" alt="#">
           <span></span>
         </div>
       </section>
