Soda Springs article photo

--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -121,9 +121,9 @@
     </div>
 
     <article class="clearfix">
-      <img class="article-img" src="images/costumes1.jpg" alt="Two Boys in Mummy Costumes">
-      <h3 class="article-title">Halloween Costume Contest</h3>
-      <h4 class="article-title">by Barry A. Live</h4>
+      <img class="article-img" src="images/station.jpg" alt="Jim Fowler in front of his Beeline Station">
+      <h3 class="article-title">Jim Fowler's Beeline Gas Station</h3>
+      <h4 class="article-title">by Chris Fowler</h4>
       <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut odit nihil doloribus nam quisquam necessitatibus beatae veniam sint, praesentium consequuntur aperiam minima fugit accusantium? Earum nam ab veritatis repellendus a? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa molestiae expedita vitae optio, impedit saepe quasi fugit, doloribus assumenda, natus in rem sit earum tenetur inventore? Inventore repellendus unde id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit explicabo asperiores corporis accusantium tempore obcaecati nihil, voluptatum ipsam sint perspiciatis voluptates tenetur ipsum, nostrum eaque quidem, soluta corrupti totam a! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ea ut, quaerat amet eaque sint eos deserunt distinctio ipsam velit tenetur minima totam numquam error modi enim nisi dolorem dicta.</p>
     </article>
 
