Soda Springs article written

--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -123,8 +123,13 @@
     <article class="clearfix">
       <img class="article-img" src="images/station.jpg" alt="Jim Fowler in front of his Beeline Station">
       <h3 class="article-title">Jim Fowler's Beeline Gas Station</h3>
-      <h4 class="article-title">by Chris Fowler</h4>
-      <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut odit nihil doloribus nam quisquam necessitatibus beatae veniam sint, praesentium consequuntur aperiam minima fugit accusantium? Earum nam ab veritatis repellendus a? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa molestiae expedita vitae optio, impedit saepe quasi fugit, doloribus assumenda, natus in rem sit earum tenetur inventore? Inventore repellendus unde id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit explicabo asperiores corporis accusantium tempore obcaecati nihil, voluptatum ipsam sint perspiciatis voluptates tenetur ipsum, nostrum eaque quidem, soluta corrupti totam a! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ea ut, quaerat amet eaque sint eos deserunt distinctio ipsam velit tenetur minima totam numquam error modi enim nisi dolorem dicta.</p>
+      <h4 class="article-title">by Chris Fowler - 11/26/2020</h4>
+      <p class="article-text">James Fowler was a prominent citizen of Soda Springs, Idaho. Around 1950, him and his brother, Vaughn
+        Fowler built a Beeline gas station on the east end of Soda Springs, highway 30. James owned and operated that service station until he sold it around 2008. During that time, it changed from Beeline to Husky to Sinclair. James Fowler was known to most people as Jim, but I knew him as grandpa.
+        <br><br>
+        Every summer I would spend a week at my grandma and grandpa Fowler's house. On some mornings in the summer, I spent time with Jim at his station. I learned to watch Jeopardy, do crossword puzzles, and I watched him do oil changes in the service bay. I remember how special I felt when he would let me pick a soda out of the cooler, or a candy off the shelf. Sometimes he would even let me reset the pumps. Jim had a daily excercise routine that he completed each morning at his station. All of his grandkids knew that Jim kept a pack of wintergreen gum in the desk drawer, along butterrum candy and cinnamon lifesavers in his pocket.
+        <br><br>
+        There are many things I remember from spending time with grandma and grandpa Fowler each summer. I remember going fishing with Jim, swimming at Lava Hot Springs, watching the red-hot slag of Monsanto ooze down the hillside, and drinking soda water from the naturally carbonated spring at Hooper Spring Park. One of the things I will always cherish is spending time with Jim at his Sinclair gas station.</p>
     </article>
 
     <div class="contact-div">
